add macOS jvm args